--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,5 @@
 {
     "name": "fostercommerce/rector",
-    "type": "library",
     "autoload": {
         "psr-4": {
             "fostercommerce\\rector\\": "src/"
@@ -9,5 +8,8 @@
     "minimum-stability": "dev",
     "require": {
         "craftcms/rector": "dev-main"
+    },
+    "require-dev": {
+        "roave/security-advisories": "dev-latest"
     }
 }
