--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     },
     "minimum-stability": "dev",
     "require": {
-        "craftcms/rector": "dev-main"
+        "craftcms/rector": "dev-main",
+        "rector/rector": "^0.19.8"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest"
